Set line height to 1em to prevent the gap between images and prevent issues with alt text

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -168,6 +168,11 @@ body.error-page * {
 /* Gallery Page */
 #photos img {
     width: 100%;
+    line-height: 1em; /* Set line height to 1em to prevent the gap between images and prevent issues if alt text being under other files / half missing / unreadable  */
+}
+
+#photos {
+    line-height: 0; /* remove lines between photos */
 }
 
 /* Footer */
